--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aicosmos_client"
-version = "0.0.1"
+version = "0.0.2"
 authors = [{ name = "Example Author", email = "author@example.com" }]
 description = "client for AICosmos platform"
 readme = "README.md"
@@ -15,7 +15,7 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
-dependencies = ["requests>=2.25.0"]
+dependencies = ["requests>=2.25.0", "textual>=5.0.0"]
 
 [project.urls]
 Homepage = "https://github.com/pypa/sampleproject"
