--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aicosmos_client"
-version = "0.0.7"
+version = "0.0.8"
 authors = [{ name = "Example Author", email = "author@example.com" }]
 description = "client for AICosmos platform"
 readme = "README.md"
@@ -15,8 +15,8 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
-dependencies = ["requests>=2.25.0", "textual>=5.0.0"]
+dependencies = ["requests>=2.25.0", "textual>=5.0.0", "certifi>=2024.0.0"]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/TitiSkywalker/AICosmos-Client"
+Issues = "https://github.com/TitiSkywalker/AICosmos-Client/issues"
